# myogait

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  test_pipeline.py  test_sapiens_pipeline.py  test_yolo_pipeline.py
docs/: tutorial.md
examples/: sapiens2_compare_pipeline.py  test_pipeline.py  test_sapiens_pipeline.py  test_yolo_pipeline.py
myogait/: __init__.py  __main__.py  analysis.py  angles.py  axis_utils.py  cli.py  config.py  constants.py  corrections.py  cycles.py  events.py  experimental.py  experimental_benchmark.py  experimental_vicon.py  export.py  extract.py  filters.py  normalize.py  normative.py  opensim.py  plotting.py  report.py  schema.py  scores.py  validation.py  video.py
notebooks/: batch_extract_sapiens.ipynb
scripts/: compare_angles.py  compare_models.py  compare_sidebyside.py  export_sapiens2_pt2.py  export_sapiens2_torchscript.md
tests/: conftest.py  test_alphapose_backend.py  test_analysis_extended.py  test_angles_extended.py  test_ankle_swap.py  test_aspect_ratio_fix.py  test_cli_coverage.py  test_coco17_foot_regression.py  test_config_schema_coverage.py  test_cross_correlation.py  test_derivatives.py  test_detectron2_backend.py  test_ensemble_average.py  test_events_extended.py  test_events_gaitkit_structured_guard.py  test_experimental.py  test_experimental_benchmark.py  test_experimental_vicon.py  test_experimental_vicon_coverage.py  test_experimental_vicon_io_edges.py  test_export_opensim.py  test_export_pipeline.py  test_export_video_cli_edges.py  test_extract.py  test_extract_extended.py  test_extract_helpers_coverage.py  test_extract_processing_coverage.py  test_extract_runtime_coverage.py  test_features_analysis.py  test_filters_main_and_repro.py  test_foot_landmarks.py  test_frontal_cycles.py  test_frontal_normative.py  test_letterbox.py  (+31 more)
(+24 files in other folders)
